IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1/28/13: Restored fortran graphics program wrappers to Mac build, lost 1/13.

1/20/13: IMOD_4-6-38
1/20/13: Fixed keypad hot keys in Model View on Mac.

1/18/14: IMOD_4-6-37
1/18/14: Further polishing of Grab with Note, which can now be used to draw
multiple arrows in Zap or Slicer windows.

1/16/14: IMOD_4-6-36
1/16/14: Jane Ding contributed Grab with Note plugin, which takes Slicer or Zap
snapshots with notes added below the image.

1/16/14: Fixed creation of patch tracking com file if mag change searched in
coarse align.

1/16/14: Change eTomo to make it independent of Cygwin.  Fixed a problem with
killing processes on Windows.(Bug# 1716)

1/14/14: Fixed bug in clip multiplying while unpacking 4-bit data, added
rounding in clip multiply or divide when outout is to an integer.

1/12/14: Made Imodchopconts able to chop up or sort out contours based on
fine-grained color.

1/11/14: Fixed 3dmod crash when the I button is pressed in Zap and no image
loaded, present since 4.6.29.

1/10/14: Made 3dmod able to read single pixels from non-MRC-like files so
Pixel View and Graph windows can show file values.
 
1/8/14: Made all C/C++ programs except Raptor able to read TIFF and MRC-like
file formats, made it possible to direct output to a format specified by
environment variable. TIFF stacks are now written with min and max of the file
in the last image directory and these values are used when reading a stack.

1/8/14: Added control of imodchopconts to eTomo - Fiducial Model Dialog.
(Bug# 1767)

1/2/14: Replaced Fortran image I/O system with system used by C programs.
Fortran programs can now read TIFF, DigitalMicrograph, and other MRC-like
files.

1/2/14: IMOD_4-6-35
1/2/14: Fixes in 3dmod for problems with toolbar and popup menu and new model
view tool windows.

12/31/13: IMOD_4-6-34
12/25/13: Changed description of hot keys in help files and tooltips to show